design-docs/grammar2.txt
PROGRAM -> <HTML> BODYHTML </HTML> $
          
BODYHTML -> BLOCKHTML BODYHTML'

BODYHTML' -> <% LS %> BODYHTML
 					| Ep

BLOCKHTML ->  PlainHTML 
					|Ep 

LS -> S LS
   | Ep
   
LS_LOOP -> LoopS LS_LOOP
   			| Ep
   
S -> Declaracion ;    //falta la produccion de variables constantes
   | IF ;
   | PREFOR ;
   | WHILE ;
   | REPEAT ;
   | CONST ;
   | CASE 
   | DeclareType ;
   | FUNCTIONDECL ;k
   | PROCEDUREDECL ;
   | PREID
   
////////////////////////////////////////////////////  
   
CONST -> id ConstDecl

ConstDecl -> = expression
            | : id = expression

/////////////////////////////////////////////////////
LoopS -> S
       | continue ;
       | break ;
/////////////////////////////////////////////////////   
PREID -> Id IdBody

IdBody -> LLAMRFUNCIONSENTENCIA ;
        | := EXPRESION ;

//////////////////////////////////////////////////////

Declaracion -> var id DeclarationTail

DeclarationTail ->  IdOpcional : id     //Lista de ids no puede ser inicializado, id es un tipo
								| 	: id AsignarValor   //id es un tipo
            
ListaId -> id IdOpcional

IdOpcional -> , ListaId
	 					| Ep

AsignarValor -> = EXPRESION
 							| Ep
//////////////////////////////////////////////////////
DeclareType -> type id = TYPE 

TYPE -> EnumeratedType 
      | TypeDef
      | Record
      | Array 

EnumeratedType -> ( ListaId ) 
                  
TypeDef -> id

Record -> record ListaPropiedades end ;

ListaPropiedades -> ListaId : RecordType 
										| Ep
                    
RecordType -> EnumeratedType ;
							| id ;
              | Record
              
Array -> array [ ListaRangos ] of ArrayTypes

ArrayTypes -> id
						| Rango
            | Array

ListaRangos -> Rango ListaRangosOp
							
ListaRangosOp -> , ListaRangos
								| Ep
                
Rango -> id 
      | Subrange
      
SubRange -> expresion l expresion //expresion debe ser del mismo tipo y constantes

IF -> if EXPRESION then BlOCK ELSE

BlOCK -> S
       | Begin LS End 
       
ELSE -> else BlOCK
		  | Ep
----------------------------------  
PREFOR -> for id ForBody

ForBody -> FOR
					| FORIN
        
FOR -> := EXPRESION to Expresion do LOOPBLOCK

FORIN ->	in id do LOOPBLOCK

WHILE -> while EXPRESION do LOOPBLOCK

LOOPBLOCK -> LoopS
			|Begin LS_LOOP End
          
REPEAT -> repeat LS_LOOP until EXPRESION
---------------------------------------

LLAMARFUNCION -> id ( LISTAEXPR )

LLAMRFUNCIONSENTENCIA -> ( LISTAEXPR )

LISTAEXPR -> EXPRESSION  LISTAEXPR_OP
					|Ep
          
LISTAEXPR_OP -> , LISTAEXPR
					| Ep

//////////////////////////////////////////////

CASE -> case id index_access of CASELIST end

CASELIST -> CASELITERAL : BLOCK ; CASELIST
					| ELSE BLOCK 
          | Ep
          
CASELITERAL -> ListaRangos //1+100..4+100, 100+6..100+7 : s := 'lowercase letter (a-z)';
          | LISTAEXPRE //400+2, 400+3, 1000 div 5: s := 'fuck';
  
PROCEDUREDECL -> procedure id PARAMS ; FUNCTIONBlOCK 

FUNCTIONDECL -> function id PARAMS : id ; FUNCTIONBlOCK

PARAMS -> ( LISTADECL )

FUNCTIONBlOCK -> Begin LS End

LISTADECL -> DECLPARAM EXTRADECL
					| Ep

EXTRADECL -> ; LISTADECL
					| Ep
          
DECLPARAM -> ListaId : id  
					| var ListaId : id

//LE EXPRESSION***

EXPRESION -> RelationalExpresion

RelationalExpresion -> ExpresionAdicion RelationalExpresion'

RelationalExpresion' -> OpRelational ExpresionAdicion RelationalExpresion'
											| Ep
             
ExpresionAdicion -> ExpresionMul ExpresionAdicion'
                
ExpresionAdicion' -> OpAdicion ExpresionMul ExpresionAdicion'
									|  Ep
                   
ExpresionMul -> ExpresionUnary ExpresionMul'
              
ExpresionMul' -> OpMul ExpresionUnary ExpresionMul'
							| Ep
              
ExpresionUnary -> not Factor
						| Factor
          
Factor ->   id index_access
          | lit_num
          | lit_string
          | lit_char
          | lit_boolean
          | lit_real
          | LLAMARFUNCION
          | ( EXPRESION )

index_access -> [EXPRESSION] index_access
								| . id index_access
                | Ep

OpRelational -> <
							| >
              | <=
              | >= 
              | <>
              | =

OpAdicion -> +
					 | -
           | Or
           
OpMul -> *
       | / 
       | div
       | mod
       | and
